Oct 18 AA menu changes

--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -370,7 +370,7 @@ div {
 <body translate="no">
 <base href="https://oristopo.github.io/nVhelp/html/nVhelp.htm">
 <p align=center>
-<font size=+1><a href="#U0">nanoVNA-H</a> Touchscreen Menu interactive map for <font color=#999900><em>Sep until Oct 17 2019</em></font> firmware</font><br>
+<font size=+1><a href="#U0">nanoVNA-H</a> Touchscreen Menu interactive map from <font color=#999900><em>Oct 18 2019</em></font> firmware</font><br>
 <a href="">help is linked by selecting</a> for buttons with underlined text<br>
 tool tips for many buttons are launched by hovering mouse pointer<br>
 <em>some</em> submenus highlight <span style="background-color: #FFFFFF"><font color="black">ACTIVE</font></span> selection on LCD</p>
@@ -494,17 +494,7 @@ tool tips for many buttons are launched by hovering mouse pointer<br>
   </li>
   <li id="p40"><p><a href="#N4">CAL</a></p>
     <ul>
-      <li id="u45"><p><tt>press after CALIBRATE or to preserve other settings</tt>SAVE</p>
-            <dl>
-              <dt><p>SAVE 0</p></dt>
-              <dt><p>SAVE 1</p></dt>
-              <dt><p>SAVE 2</p></dt>
-              <dt><p>SAVE 3</p></dt>
-              <dt><p>SAVE 4</p></dt>
-            </dl>
-      </li>
-      <li><p><tt>press to clear data before CALIBRATE</tt>RESET</p></li>
-      <li><p><tt>press RESET to clear data before calibrating.<br>
+      <li id="u20"><p><tt>press RESET to clear data before calibrating.<br>
 	Make appropriate [dis]connections before touching associated button</tt>CALIBRATE</p>
         <dl>
           <dt><p>OPEN</p></dt>
@@ -518,12 +508,20 @@ tool tips for many buttons are launched by hovering mouse pointer<br>
               <li><p>SAVE 1</p></li>
               <li><p>SAVE 2</p></li>
               <li><p>SAVE 3</p></li>
-              <li><p>SAVE 4</p></li>
             </ul>
           </dt>
         </dl>
       </li>
-      <li id="u30"><p><tt>toggle calibration<br>on / off</tt>CORRECTION</p></li>
+      <li id="u30"><p><tt>press after CALIBRATE or to preserve other settings</tt>SAVE</p>
+            <dl>
+              <dt><p>SAVE 0</p></dt>
+              <dt><p>SAVE 1</p></dt>
+              <dt><p>SAVE 2</p></dt>
+              <dt><p>SAVE 3</p></dt>
+            </dl>
+      </li>
+      <li><p><tt>press to clear data before CALIBRATE</tt>RESET</p></li>
+      <li id="u20"><p><tt>toggle calibration<br>on / off</tt>CORRECTION</p></li>
     </ul>
   </li>
   <li>
@@ -533,7 +531,6 @@ tool tips for many buttons are launched by hovering mouse pointer<br>
         <dt><p>RECALL 1</p></dt>
         <dt><p>RECALL 2</p></dt>
         <dt><p>RECALL 3</p></dt>
-        <dt><p>RECALL 4</p></dt>
       </dl>
   </li>
   <li>
