--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -168,7 +168,12 @@ or <code>800</code> versions for devices with weaker high frequency performance<
 <br><a href="https://groups.io/g/nanovna-users/message/4697">75-Ohm "device"</a> 12 Oct 2019
 <br><a href="https://groups.io/g/nanovna-users/message/4778">touchscreen test</a>
 <br><a href="https://groups.io/g/nanovna-users/message/5031">console scan command: scanraw</a> 16 Oct 2019
-
+<br><a href="https://groups.io/g/nanovna-users/message/5445">edy555 firmware v 0.3.3</a> 21 Oct 2019
+<ul compact><li>battery voltage on CONFIG => VERSION screen
+<li>si5351 check for stability > 200MHz
+<li>bug fixes, better noise floor and more precise measurement
+<li>white/yellow/red indicator for normal/low/critical battery
+</ul>
 <br><br><dt><font size=+1><b>Xenomorph</b></font>
 <dd>- 256 point FFT Firmware 
 <a href="https://groups.io/g/nanovna-users/attachment/3028/1/XENOMORPH%20firmware%20with%20FFT%20256,%20instead%20of%20128_1500.rar">email RAR attachment</a>
