--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -159,24 +159,21 @@ or <code>800</code> versions for devices with weaker high frequency performance<
 <dd> primarily intended for use with <a href="https://groups.io/g/nanovna-users/files/NanoVNA%20PC%20Software/TAPR%20VNA">TAPR VNA v4 PC software</a>
 
 <br><br><dt id="DMR"><font size=+1><b>DMR</b></font>
-<dd>10KHz-1.5GHz_05.10.2019.rar
-<a href="https://groups.io/g/nanovna-users/message/4073">message .rar attachment</a>
 
-<dd>tweak colors to white <a href="https://groups.io/g/nanovna-users/attachment/3337">message .rar attachment</a>
+<dd><a href="https://groups.io/g/nanovna-users/message/3337">tweak colors to white</a>
 <br><a href="https://groups.io/g/nanovna-users/message/4674">on-display voltage measurement</a> and
  <a href="https://groups.io/g/nanovna-users/message/4666">voltmeter hack</a>
 <br><a href="https://groups.io/g/nanovna-users/message/4697">75-Ohm "device"</a> 12 Oct 2019
 <br><a href="https://groups.io/g/nanovna-users/message/4778">touchscreen test</a>
 <br><a href="https://groups.io/g/nanovna-users/message/5031">console scan command: scanraw</a> 16 Oct 2019
-<br><a href="https://groups.io/g/nanovna-users/message/5445">edy555 firmware v 0.3.3</a> 21 Oct 2019
+<br><a href="https://groups.io/g/nanovna-users/message/5445">edy555 firmware v 0.3.3</a> 21 Oct 2019 10kHz-1.5GHz
 <ul compact><li>battery voltage on CONFIG => VERSION screen
 <li>si5351 check for stability > 200MHz
 <li>bug fixes, better noise floor and more precise measurement
 <li>white/yellow/red indicator for normal/low/critical battery
 </ul>
 <br><br><dt><font size=+1><b>Xenomorph</b></font>
-<dd>- 256 point FFT Firmware 
-<a href="https://groups.io/g/nanovna-users/attachment/3028/1/XENOMORPH%20firmware%20with%20FFT%20256,%20instead%20of%20128_1500.rar">email RAR attachment</a>
+<dd>- <a href="https://groups.io/g/nanovna-users/message/3028">256 point FFT Firmware</a>
 (hwalker Sep 25)<br>
 - <a href="https://groups.io/g/nanovna-users/message/4537">75 Ohm firmware (Aug-30-19)</a>
 Z0-CENTER 75 Ohm:
