nothing imaginary in menu; single nanoVNA USB command Python script with no comment

--- a/html/Menu.htm
+++ b/html/Menu.htm
@@ -378,7 +378,7 @@ tool tips for many buttons are launched by hovering mouse pointer<br>
 <div class="tree">
 <p>Press control or touch screen for menu</p>
 <ul>
-  <li id="p20"><p><a href="#U1">DISPLAY</a></p>
+  <li id="p20"><p><tt>Select TRACE before FORMAT, SCAKE, or CHANNEL</tt> <a href="#U1">DISPLAY</a></p>
     <ul>
       <li id="u30"><p><tt>2/4 limit for aa/ch firmware</tt><a href="#U1L1">TRACE</a></p>
         <dl>
@@ -401,12 +401,12 @@ tool tips for many buttons are launched by hovering mouse pointer<br>
 	  <dt><p><tt>Standing Wave Ratio</tt>SWR</p></dt>
 	  <dt id="u20"><p><tt>..but better?</tt>MORE</p>
 	    <ul>
-	      <li><p><tt>(for S21) imaginary vs real</tt>POLAR</p></li>
+	      <li><p><tt>(for S21) quadrature vs in-phase</tt>POLAR</p></li>
 	      <li><p><tt>measured magnitude linear scaled</tt>LINEAR</p></li>
 	      <li><p><tt>inline component</tt>REAL</p></li>
 	      <li><p><tt>quaderature component</tt>IMAG</p></li>
-	      <li><p><tt>real impedance component</tt>RESISTANCE</p></li>
-	      <li><p><tt>imaginary impedance component</tt>REACTANCE</p></li>
+	      <li><p><tt>resistive impedance component</tt>RESISTANCE</p></li>
+	      <li><p><tt>inductive or capacitive component</tt>REACTANCE</p></li>
             </ul>
 	  </dt>
         </dl>
@@ -437,7 +437,7 @@ tool tips for many buttons are launched by hovering mouse pointer<br>
 	  <dt><p>CH1 THROUGH</p></dt>
         </dl>
       </li>
-      <li><p><tt>for TDR</tt><a href="https://groups.io/g/nanovna-users/attachment/3083/0/TDR.pdf">TRANSFORM</a></p>
+      <li><p><tt>for DELAY (TDR)</tt><a href="https://groups.io/g/nanovna-users/attachment/3083/0/TDR.pdf">TRANSFORM</a></p>
         <dl>
           <dt><p><tt>enables LOW/BANDPASS</tt>TRANSFORM ON</p></dt>
           <dt><p><tt>set REAL start 50kHz</tt>LOW PASS IMPULSE</p></dt>
