added QRP releases

--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -172,7 +172,9 @@ or <code>800</code> versions for devices with weaker high frequency performance<
 <li>bug fixes, better noise floor and more precise measurement
 <li>white/yellow/red indicator for normal/low/critical battery
 </ul>
-<br><br><dt><font size=+1><b>Xenomorph</b></font>
+<dt><font size=+1><b>QRP</b></font>
+<dd><a href="https://github.com/qrp73/NanoVNA-Q/releases">GitHub Releases</a> 10/23/2019 fix thread safety, numpad rounding errors
+<br><br><br><dt><font size=+1><b>Xenomorph</b></font>
 <dd>- <a href="https://groups.io/g/nanovna-users/message/3028">256 point FFT Firmware</a>
 (hwalker Sep 25)<br>
 - <a href="https://groups.io/g/nanovna-users/message/4537">75 Ohm firmware (Aug-30-19)</a>
