--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -106,22 +106,22 @@ After loading this, your nanoVNA will <em>not</em> again work until <em>after</e
 <br><br><dt><font size=+1><b>Larry Rothman's <a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019">Firmware Archive</a></b></font>
 <dd>some of that content is linked below
 
-<br><br><dt><font size=+1><b>HuGen's</b> <a href="https://drive.google.com/drive/folders/1IRz6E1wlkRyV0u7sbqj0lhWST-GV1szY">Google Drive folder</a>,
+<br><br><dt><font size=+1><b>HuGen's</b> <a href="https://drive.google.com/drive/folders/1-JViWLBOIzaHTdwdONX2RP8S4EgWxoND">Google Drive folder</a>,
     &nbsp <a href="https://github.com/hugen79/NanoVNA-H/releases">GitHub Releases</a>, &nbsp
    <a href="https://groups.io/g/nanovna-users/files/Firmware/hugen%27s%20firmware%20release%20notes.pdf">Release Notes</a> PDF</font>
 <br>
-<details  style="background-color:powderblue;">
 
-<summary>click here for <font color="green">HuGen</font> firmware naming conventions and differences from edy555 firmware</summary>
-A typical name is <code>NanoVNA-H_900_ch_20191003.dfu</code>
-<br><br>
-Many special firmware are available with different naming,<br>
-and usually <em>without</em> <code>aa</code> versions with larger text<br>
-or <code>800</code> versions for devices with weaker high frequency performance<br>
+<details  style="background-color:powderblue;">
+<summary>click here for <font color="green">HuGen</font>firmware naming conventions and differences from edy555 firmware</summary>
+
+A typical name is <code>NanoVNA-H_900_ch_20191003.dfu</code><br>
+<br>
+Many special firmware are available elsewhere with different naming,<br>
+and <em>without</em> <code>aa</code> versions having larger text<br>
 <br>
 <dt><code>NanoVNA-H</code>
 <dd>owner or special purpose.<br>  edy555 "owns" NanoVNA; HuGen "owns" NanoVNA-H
-<br>HuGen typically provided 4 versions for each release date.<br>
+<br>HuGen originally provided 4 versions for each release date.<br>
 <dt><code>900</code> &nbsp <- <i><b>obsolete</b></i>
 <dd>most devices can overclock for 900MHz third harmonic. <br> To avoid artifacts with weaker devices, use <code>800</code> firmware versions
 <br>since <code>20191009</code>, overclock tuning is user-adjustable
@@ -145,8 +145,8 @@ or <code>800</code> versions for devices with weaker high frequency performance<
 <br>
 </details>
 
-<dd> <a href="https://drive.google.com/drive/folders/1H_l_3vnXSgg6AOIngvMEsPpIvRVTG7hq"><b>NanoVNA-H-20191009</b></a> Oct 9, 2109 by Gen Hu, nanoVNA-H owner
-  <br> &nbsp - latest "aa" (larger text, 2 trace) firmware no longer requires separate clear memory download
+<dd> <a href="https://drive.google.com/drive/folders/1H_l_3vnXSgg6AOIngvMEsPpIvRVTG7hq"><b>NanoVNA-H-20191018</b></a> 2019/10/18 by Gen Hu, nanoVNA-H owner
+  <br> &nbsp - recent "aa" (larger text, 2 trace) firmware no longer requires separate clear memory download
   <br>(product?) <a href="https://drive.google.com/drive/folders/1IZEtx2YdqchaTO8Aa9QbhQ8g_Pr5iNhr">Google Drive folder</a>
 
 <br><br><dt><font size=+1><b>edy555's <a href="https://github.com/ttrftech/NanoVNA/releases">GitHub Releases</a> &nbsp <a href="https://circleci.com/gh/ttrftech/NanoVNA">change log</a>
@@ -173,9 +173,15 @@ or <code>800</code> versions for devices with weaker high frequency performance<
 <li>white/yellow/red indicator for normal/low/critical battery
 </ul>
 <dt><font size=+1><b>QRP</b></font>
-<dd><a href="https://github.com/qrp73/NanoVNA-Q/releases">GitHub Releases</a> 10/23/2019 fix thread safety, numpad rounding errors
+<dd><a href="https://github.com/qrp73/NanoVNA-Q/releases">GitHub Releases</a> both hex and dfu based on NanoVNA-H
+<ul compact><li>better noise floor
+<li>0.4.1 2019/10/23 fix thread safety, numpad rounding errors,
+ <a href="https://groups.io/g/nanovna-users/message/5653">screenshot capture from any menu state</a>
+<li>0.4.2 2019/10/28 <a href="https://groups.io/g/nanovna-users/message/5914">color command</a>, multi-threading fix (USB connect after PAUSE SWEEP)
+</ul>
 <br><br><br><dt><font size=+1><b>Xenomorph</b></font>
-<dd>- <a href="https://groups.io/g/nanovna-users/message/3028">256 point FFT Firmware</a>
+<dd>- <a href="https://groups.io/g/nanovna-users/message/3028">
+256 point FFT Firmware</a>
 (hwalker Sep 25)<br>
 - <a href="https://groups.io/g/nanovna-users/message/4537">75 Ohm firmware (Aug-30-19)</a>
 Z0-CENTER 75 Ohm:
