--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -174,7 +174,7 @@ and <em>without</em> <code>aa</code> versions having larger text<br>
 </ul>
 <dt><font size=+1><b>QRP</b></font>
 <dd><a href="https://github.com/qrp73/NanoVNA-Q/releases">GitHub Releases</a> both hex and dfu based on NanoVNA-H
-<ul compact><li>better noise floor
+<ul compact><li>better noise floor, si5351 hardware check <a href="https://github.com/qrp73/NanoVNA-Q/blob/master/README.md">and more</a>
 <li>0.4.1 2019/10/23 fix thread safety, numpad rounding errors,
  <a href="https://groups.io/g/nanovna-users/message/5653">screenshot capture from any menu state</a>
 <li>0.4.2 2019/10/28 <a href="https://groups.io/g/nanovna-users/message/5914">color command</a>, multi-threading fix (USB connect after PAUSE SWEEP)
