consolidate firmware; update software

--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -28,6 +28,7 @@
 <dl>
 <dt><font size=+1><b>Firmware replacement instructions:</b></font>
   <dd>
+  <img src="NanoVNAboot.jpg"><br clear=all>
   <a href="https://groups.io/g/nanovna-users/files/Firmware/Windows%20guide%20on%20how%20to%20write%20firmware.pdf">Replace NanoVNA Firmware from Windows</a>
   <br><a href="https://cho45.github.io/NanoVNA-manual/">Replace NanoVNA Firmware from macOS or Ubuntu</a> <i>see Section 8.</i>
   <br><a href="https://groups.io/g/nanovna-users/message/3487">Android DfuSe programming</a>
@@ -172,13 +173,18 @@ and <em>without</em> <code>aa</code> versions having larger text<br>
 <li>bug fixes, better noise floor and more precise measurement
 <li>white/yellow/red indicator for normal/low/critical battery
 </ul>
+
 <dt><font size=+1><b>QRP</b></font>
 <dd><a href="https://github.com/qrp73/NanoVNA-Q/releases">GitHub Releases</a> both hex and dfu based on NanoVNA-H
 <ul compact><li>better noise floor, si5351 hardware check <a href="https://github.com/qrp73/NanoVNA-Q/blob/master/README.md">and more</a>
 <li>0.4.1 2019/10/23 fix thread safety, numpad rounding errors,
  <a href="https://groups.io/g/nanovna-users/message/5653">screenshot capture from any menu state</a>
-<li>0.4.2 2019/10/28 <a href="https://groups.io/g/nanovna-users/message/5914">color command</a>, multi-threading fix (USB connect after PAUSE SWEEP)
+<li>0.4.2 2019/10/28 <a href="https://groups.io/g/nanovna-users/message/5914">color command</a>,
+    multi-threading fix (USB connect after PAUSE SWEEP)
+<li>0.4.3 2019/11/01 <a href="https://groups.io/g/nanovna-users/message/6270">vbat_offset,
+    new battery icon with capacity %</a>, marker update crash fix
 </ul>
+
 <br><br><br><dt><font size=+1><b>Xenomorph</b></font>
 <dd>- <a href="https://groups.io/g/nanovna-users/message/3028">
 256 point FFT Firmware</a>
