--- a/html/software.htm
+++ b/html/software.htm
@@ -23,7 +23,7 @@ which enables more thorough clean up with any subsequent removals.<br>
 
 <h4>USB device</h4>
 Firmware controls USB ID in nanoVNA,<br>
-which may confound installation and firmware updating.<br>
+which may confound driver installation and firmware updating.<br>
 Debugging may be facilitated by recording related Windows activity.<br>
 Logging may be accomplished by first installing NirSofts'
 <a href="http://www.nirsoft.net/utils/usb_log_view.html">USBLogView</a>.
