Wnano, index.html
Wnano.html for printing; index.html to access files online; link in index.md.
Update Knano with Vnano description

--- a/html/Wnano.htm
+++ b/html/Wnano.htm
@@ -13,9 +13,9 @@
 body {
   margin: 0;
   padding: 0px;
-  color: #ffffff;
+  color: #000000;
   font: 11px Verdana, sans-serif;
-  background: #000000;
+  background: #FFFFFF;
 }
 
 .tree {
@@ -30,9 +30,9 @@ body {
   width: 80px;
   line-height: 20px;
   text-align: center;
-  border: 2px solid #ffffff;
+  border: 2px solid #000000;
   border-radius: 5px;
-  background: rgba(0, 0, 0, 1.0);
+  background: rgba(255, 255, 255, 1.0);
   left: 0;
   margin-bottom: 0px;
   top: 50%;
@@ -52,7 +52,7 @@ body {
 }
 
 #blu  {
-  background: rgba(0, 0, 255, 1.0);
+  background: rgba(90, 90, 255, 1.0);
 }
 
 #grn {
@@ -64,11 +64,11 @@ body {
 }
 
 a {
-  color:yellow;
+  color:#AA4400;
 }
 
 a:visited {
-  color: #FF00FF;
+  color: #AA00CC;
 }
 
 /* vertically align paired <p>'s */
@@ -84,7 +84,7 @@ a:visited {
 .tree p+p::before {
   position: absolute;
   content: '';
-  border-left: 2px solid #fff;
+  border-left: 2px solid #000;
   left: 50%;
   top: -12px;
   height: 12px;
@@ -126,12 +126,16 @@ a:visited {
   padding-bottom: 40px;
 }
 
+#p60 {
+  padding-bottom: 60px;
+}
+
 #u30 {
   margin-bottom: -30px;
 }
 
-#p60 {
-  padding-bottom: 60px;
+#u60 {
+  margin-bottom: -60px;
 }
 
 /* horizontal branches */
@@ -182,7 +186,7 @@ a:visited {
   position: absolute;
   content: "";
   /* horizontal connector before entry */
-  border-top: 2px solid #ffffff;
+  border-top: 2px solid #000000;
   top: 20px;
   width: 15px;
   left: -15px;
@@ -198,7 +202,7 @@ a:visited {
 .tree dt::after, dd::after {
   position: absolute;
   content: "";
-  border-top: 2px solid #ffffff;
+  border-top: 2px solid #000000;
   top: -4px;
   /* changing p width impacts this HHH */
   left: 45px;	/* % fails if child dl */
@@ -214,7 +218,7 @@ a:visited {
   position: absolute;
   content: "";
   height: 100%;
-  border-left: 2px solid #ffffff;
+  border-left: 2px solid #000000;
   min-height: 36px;  /* force vertical connections */
   left: -15px;
   top: 20px;
@@ -231,7 +235,7 @@ a:visited {
 .tree dt::before {
   position: absolute;
   content: "";
-  border-left: 2px solid #ffffff;
+  border-left: 2px solid #000000;
   /* changing p width impacts this HHH */
   left: 45px;	/* % fails if child dl */
   height: 14px;
@@ -242,7 +246,7 @@ a:visited {
 .tree dl::before {
   position: absolute;
   content: "";
-  border-left: 2px solid #ffffff;
+  border-left: 2px solid #000000;
   height: 22px;
   top: -12px;
   /* changing p width impacts this HHH */
@@ -317,6 +321,35 @@ a:visited {
   z-index: 200;	/* does not help */
 }
 
+/* CSS hover image overloading <i> */
+.tree i {
+  visibility: hidden;
+  display:block;
+  min-width: 20px;
+  border: 1px solid #FFFFFF;
+  background: url(smith.jpg) no-repeat;
+  min-width:64px;
+  min-height:51px;
+  border-radius: 6px;
+  padding: 5px 5px;
+
+  /* tooltip position */
+  position: absolute;
+  bottom: -10px;	/* up and left to avoid being obscured */
+  right: 80px;
+  z-index: 200;	/* does not help */
+}
+
+.tree p:hover i {
+  visibility: visible;
+  z-index: 200;	/* does not help */
+}
+
+div {
+  position: absolute;
+  top: 50px;
+}
+
 </style>
 </head>
 <!--
@@ -332,7 +365,7 @@ a:visited {
 tool tips for many buttons are launched by hovering mouse pointer<br>
 
 
-<em>some</em> submenus highlight <span style="background-color: #FEFEFE"><font color="black">ACTIVE</font></span> selection on LCD
+<em>some</em> submenus highlight <span style="background-color: #FFFFFF"><font color="black">ACTIVE</font></span> selection on LCD
 
 </p>
 
@@ -347,27 +380,27 @@ tool tips for many buttons are launched by hovering mouse pointer<br>
 	    <tt>select, toggle off/on</tt>TRACE 0</p></dt>
           <dt><p id="blu">
 	    <tt>select, toggle off/on</tt>TRACE 1</p></dt>
-          <dt><p id="grn"><tt>{<i><b>4-trace firmware only</b></i>}<br>
+          <dt><p id="grn"><tt>{<em><b>4-trace firmware only</b></em>}<br>
 	        select, toggle off/on</tt>TRACE 2</p></dt>
-          <dt><p id="red"><tt>{<b><i>4-trace firmware only</i></b>}<br>
+          <dt><p id="red"><tt>{<b><em>4-trace firmware only</em></b>}<br>
 	        select, toggle off/on</tt>TRACE 3</p></dt>
         </dl> 
       </li>
       <li><p>FORMAT</p>
         <dl>
-          <dd><p>LOGMAG</p></dd>
-	  <dt><p>PHASE</p></dt>
-	  <dt><p>DELAY</p></dt>
-	  <dt><p>SMITH</p></dt>
-	  <dt><p>SWR</p></dt>
-	  <dt><p>MORE</p>
+          <dd><p><tt>measured magnitude log scaled</tt>LOGMAG</p></dd>
+	  <dt><p><tt>-180<=linear degrees<=+180</tt>PHASE</p></dt>
+	  <dt><p><tt>see TRANSFORM</tt>DELAY</p></dt>
+	  <dt><p><i>    </i>SMITH</p></dt>
+	  <dt><p><tt>Standing Wave Ratio</tt>SWR</p></dt>
+	  <dt><p><tt>..but better?</tt>MORE</p>
 	    <ul>
-	      <li><p>POLAR</p></li>
-	      <li><p>LINEAR</p></li>
-	      <li><p>REAL</p></li>
-	      <li><p>IMAG</p></li>
-	      <li><p>RESISTANCE</p></li>
-	      <li><p>REACTANCE</p></li>
+	      <li><p><tt>(for S21) imaginary vs real</tt>POLAR</p></li>
+	      <li><p><tt>measured magnitude linear scaled</tt>LINEAR</p></li>
+	      <li><p><tt>inline component</tt>REAL</p></li>
+	      <li><p><tt>quaderature component</tt>IMAG</p></li>
+	      <li><p><tt>real impedance component</tt>RESISTANCE</p></li>
+	      <li><p><tt>imaginary impedance component</tt>REACTANCE</p></li>
             </ul>
 	  </dt>
         </dl>
@@ -376,28 +409,37 @@ tool tips for many buttons are launched by hovering mouse pointer<br>
         <dl>
           <dt id="p60">
 	    <p><a href="#U131">SCALE/DIV</a></p>
-	    <p><tt>position trace vertically</tt>
+	    <p><tt>rescale trace vertically</tt>
                <a href="#U133">NUM KEYS</a></p>
           </dt>
           <dt><p><tt>touch nanoVNA screen below menu to launch numeric keypad;<br>
 		     click link here for numeric input discussion</tt>
 		 <a href="#U132">REFERENCE POSITION</a></p>
-	      <p><tt>touch below menu to launch</tt>NUM KEYS</p>
+	    <p><tt>position trace vertically</tt>
+               <a href="#U133">NUM KEYS</a></p>
 	  </dt>
 	  <dt><p><tt>compensate CAL by e.g. cable length in picoseconds</tt>
 		 <a href="#U134">ELECTRICAL DELAY</a></p>
-	      <p><tt>touch below menu to launch</tt>NUM KEYS</p>
+	      <p>NUM KEYS</p>
 	  </dt>
         </dl>
       </li>
-      <li><p><tt></tt>TRANSFORM</p>
+      <li><p><tt>for TDR</tt><a href="https://groups.io/g/nanovna-users/attachment/3083/0/TDR.pdf">TRANSFORM</a></p>
         <dl>
-          <dt><p><tt> </tt>TRANSFORM ON</p></dt>
-          <dt><p><tt> </tt>LOW PASS IMPULSE</p></dt>
-          <dt><p><tt> </tt>LOW PASS STEP</p></dt>
-          <dt><p><tt> </tt>BANDPASS</p></dt>
-          <dt><p><tt> </tt>WINDOW</p></dt>
-          <dt><p><tt> </tt>VELOCITY FACTOR</p></dt>
+          <dt><p><tt>enables LOW/BANDPASS</tt>TRANSFORM ON</p></dt>
+          <dt><p><tt>set REAL start 50kHz</tt>LOW PASS IMPULSE</p></dt>
+          <dt><p><tt>set REAL start 50kHz</tt>LOW PASS STEP</p></dt>
+          <dt><p><tt>set SWR, LINEAR or LOGMAG</tt>BANDPASS</p></dt>
+          <dt id="u60"><p><tt>modifies LOW/BANDPASS</tt>WINDOW</p>
+	    <ul>
+	      <li><p><tt>max resolution</tt>MINIMUM</p></li>
+	      <li><p>NORMAL</p></li>
+	      <li><p><tt>max dymanic range</tt>MAXIMUM</p></li>
+            </ul>
+          </dt>
+          <dt><p><tt>tweak for actual distance</tt>VELOCITY FACTOR</p>
+	      <p>NUM KEYS</p>
+          </dt>
         </dl> 
       </li>
       <li><p><tt>select port to measure;<br>
@@ -465,9 +507,9 @@ tool tips for many buttons are launched by hovering mouse pointer<br>
         <dl>
           <dt><p>OPEN</p></dt>
           <dt><p>SHORT</p></dt>
-          <dt><p><tt>attach 50 Ohm load to TX port</tt>LOAD</p></dt>
-          <dt><p><tt>attach a 50 Ohm load to each port</tt>ISOLATION</p></dt>
-          <dt><p><tt>connect SMA cable[s] between ports</tt>THRU</p></dt>
+          <dt><p><tt>attach 50 Ohm load to CH0</tt>LOAD</p></dt>
+          <dt><p><tt>attach 50 Ohm loads to CHO + CH1</tt>ISOLATION</p></dt>
+          <dt><p><tt>connect cable[s] CH0<=>CH1</tt>THRU</p></dt>
           <dt><p>DONE</p>
             <ul>
               <li><p>SAVE 0</p></li>
@@ -482,11 +524,7 @@ tool tips for many buttons are launched by hovering mouse pointer<br>
       <li id="u30"><p><tt>toggle calibration<br>on / off</tt>CORRECTION</p></li>
     </ul>
   </li>
-  <li>
-    <p>
-    <tt>what is SAVE under CONFIG??</tt>
-	RECALL
-    </p>
+  <li><p>RECALL</p>
       <dl>
         <dt><p>RECALL 0</p></dt>
         <dt><p>RECALL 1</p></dt>
@@ -501,15 +539,15 @@ tool tips for many buttons are launched by hovering mouse pointer<br>
 	CONFIG
     </p>
       <dl>
-        <dd><p>TOUCH CAL</p></dd>
-        <dt><p>TOUCH TEST</p></dt>
-        <dt><p><tt>no obvious effect</tt>SAVE</p></dt>
+        <dd><p><a href="#TSC">TOUCH CAL</a></p></dd>
+        <dt><p><a href="#TSC">TOUCH TEST</a></p></dt>
+        <dt><p><tt>touchscreen calibration</tt>SAVE</p></dt>
         <dt><p>VERSION</p></dt>
         <dt><p>DFU</p>
-	  <dl>
-	    <dd><p>RESET AND ENTER DFU</p></dd>
-	    <dt><p>CANCEL</p></dt>
-	  </dl>
+	  <ul>
+	    <li><p>RESET AND ENTER DFU</p></li>
+	    <li><p>CANCEL</p></li>
+	  </ul>
 	</dt>
       </dl>
   </li>
